--- a/css/styles.css
+++ b/css/styles.css
@@ -56,12 +56,14 @@ nav a:visited.logo {
     text-decoration: none;
     outline: none;
 }
-nav .navbar {
+nav .navbar,
+nav .mobile {
     list-style: none;
     margin: 0;
     float: right;
 }
-nav .navbar li {
+nav .navbar li,
+nav .mobile li {
     display: inline;
     padding: 0 1rem;
 }
@@ -75,7 +77,25 @@ nav .navbar button {
     border: 0;
     outline: none;
 }
-
+nav .mobile {
+    display: none;
+}
+@media (max-width: 768px) { 
+    nav .navbar {
+        display: none;
+    }
+    nav .mobile {
+        display: block;
+    }
+}
+@media (max-width: 576px) { 
+    nav .navbar {
+        display: none;
+    }
+    nav .mobile {
+        display: block;
+    }
+}
 /* Banner */
 .banner {
     background: linear-gradient(#2b3455,#090a11);
